fixed main page scrollbar issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,26 +6,39 @@
   html {
     color-scheme: dark;
   }
-  
+
   th,
   td {
     font: inherit;
     text-align: inherit;
   }
-  
+
   /* width */
   ::-webkit-scrollbar {
-      width: 10px;
+    width: 10px;
   }
-   
+
   /* Track */
   ::-webkit-scrollbar-track {
-      @apply bg-zinc-500 rounded-lg;
+    @apply rounded-lg bg-zinc-500;
   }
-   
+
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    @apply bg-zinc-300 hover:bg-zinc-200 rounded-lg;
+    @apply rounded-lg bg-zinc-300 hover:bg-zinc-200;
   }
-  
+}
+
+/* styles.css */
+.scrollbar-thin::-webkit-scrollbar {
+  width: 6px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #f8f8f8;
+  border-radius: 6px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+  background-color: gray;
 }
